# opencli

./: .daemon  .dockerignore  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIRST_RELEASE_SUMMARY.md  Makefile  PUBLISHING.md  QUICK_START_RELEASE.md  README.md  smithery.json
.claude/: instructions.md  settings.local.json
.opencli/: mcp-servers.json
cli/: Cargo.toml  README.md
cli/src/: args.rs  error.rs  ipc.rs  main.rs  resource.rs
cloud/: .env.example  .gitignore  COOLIFY_QUICK_START.md  COOLIFY_SETUP.md  DEPLOYMENT_CHECKLIST.md  README.md  coolify-auto-deploy.sh  coolify-import.json  coolify.yaml  deploy.sh  docker-compose.yml  setup-and-deploy.sh
colab-inference/: opencli_gpu.ipynb
config/: channels.example.yaml  config.example.yaml  personal.default.yaml
daemon/: main.py  pubspec.yaml  requirements.txt  test_integration.py
daemon-dart-archive/: README.md
daemon-py/: test_integration.py
docs/: 100_PERCENT_COMPLETION.md  ACTUAL_TESTING_PLAN.md  ANDROID_RELEASE_BLOCKER.md  API.md  APP_STORE_PREPARATION_COMPLETE.md  APP_STORE_QUICK_START.md  APP_STORE_SUBMISSION_CHECKLIST.md  APP_STORE_SUBMISSION_GUIDE.md  ARCHITECTURE.md  AUTO_RELEASE_EXECUTION_SUMMARY.md  BUG_FIXES_SUMMARY.md  CHAT_INTERFACE_TEST_REPORT.md  CLIENT_RELEASES_COMPLETE.md  CLIENT_TEST_REPORT.md  COMPLETE_SYSTEM_REPORT.md  CONFIGURATION.md  CREATE_REPOS_GUIDE.md  CURRENT_STATUS_REPORT.md  DAILY_PROGRESS_2026-02-03.md  DATA_SAFETY_DECLARATION.md  DISTRIBUTION_CHANNELS.md  E2E_TEST_PLAN.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_TEST_REPORT.md  (+56 more)
(+555 files in other folders)
